feat: refactor hero-state

--- a/examples/var-angular/angular.json
+++ b/examples/var-angular/angular.json
@@ -125,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "var-angular"
+  "defaultProject": "var-angular",
+  "cli": {
+    "analytics": false
+  }
 }
